# dy

./: .env.example  .gitignore  AGENTS.md  README.md  app.py  config.py  main.py  pyproject.toml
auth/: telegram.py
bot/: files.py  handlers.py  router.py
bot/handlers/: __init__.py  admin.py  common.py  csv_export.py  leave.py  notes.py  profile.py  tasks.py  views.py
controllers/: userController.py
db/: database.py  sync.py
dy/: database.py  models.py
migrations/: env.py
migrations/versions/: 2a3b4c5d6e7f_add_email_to_users.py  dc65e9ede111_initial.py
models/: __init__.py  attendance.py  cleaning.py  complain.py  enums.py  infoNote.py  leave.py  models.py  task.py  telegramUser.py  user.py
previouse/: app.py  config.py
previouse/bot/: files.py  router.py
previouse/bot/handlers/: __init__.py  admin.py  common.py  csv_export.py  leave.py  notes.py  profile.py  tasks.py  views.py
previouse/db/: database.py  sync.py
previouse/models/: models.py
previouse/web/: app.html  attendance_routes.py  info_routes.py  instructor.html  launch.html  mark.html  note_routes.py  routes.py  scanner.html  scheduler.py  security.py  task_routes.py
previouse/web/sections/: cleaning.html  creation_codes.html  info.html  (+4 more)
routes/: auth.py  web.py
web/: app.html  attendance_routes.py  cloudinary.py  info_routes.py  instructor.html  launch.html  mark.html  note_routes.py  register-standalone.html  routes.py  scanner.html  scheduler.py  security.py  task_routes.py
web/sections/: attendance.html  bulletin.html  cleaning.html  codes.html  inst_bulletin.html  inst_tasks.html  notes.html  pass.html  people.html  register.html  registers.html  stats.html  tasks.html  users.html
web/static/: app.js
web/templates/: index.html  registraion.html
(+5 files in other folders)
