[project]
name = "dy"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic",
    "apscheduler>=3.11.2",
    "asyncmy",
    "fastapi",
    "pydantic-settings",
    "python-dotenv",
    "python-multipart>=0.0.32",
    "python-telegram-bot",
    "qrcode[pil]",
    "sqlalchemy",
    "uvicorn[standard]",
]
